--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
 "update_url": "https://clients2.google.com/service/update2/crx",
 
     "manifest_version": 2,
-    "name": "CoinTicker",
-    "version": "2.1.1",
+    "name": "Cryptools",
+    "version": "1.0.0",
     "description": "A configurable cryptocurrency ticker that includes price tracking for Bitcoin, Litecoin, Ethereum, and many more.",
-    "author": "Justin Wasack",
+    "author": "cryptools.org",
     "homepage_url": "https://github.com/quoid/coin-ticker",
     "icons": { 
         "256": "Icon.png"
